# wsdd-rs

./: .gitignore  .python-version  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  cliff.toml  clippy.toml  cog.toml  generate-test-report.sh  justfile  package-lock.json  package.json  project-words.txt  spellcheck.dic  update-from-upstream.sh
.github/: settings.yml
.github/workflows/: build.yml  ci.yml  codeql.yml  container-cleanup.yml  format.yml  lint-commits.yml  machete.yml  publish-crate-after-release.yml  release.yml  retag-containers-after-push.yml  retag-containers-after-release.yml  rust.yml  semgrep.yml  spellcheck.yml  test-release.yml
build-scripts/: build.sh
comparison/client/new/: get.xml  probe.xml  resolve.xml
comparison/client/original/: get.xml  probe.xml  resolve.xml
comparison/host/new/: get-response.xml  hello-with-xsd.xml
comparison/host/original/: get-response.xml  resolve-matches.xml
comparison/incoming/: wsd-host-hello.xml
crates/ffi/: Cargo.toml
crates/ffi/src/: lib.rs
crates/service/: Cargo.toml
crates/service/src/: api_server.rs  config.rs  ffi.rs  kernel_buffer.rs  main.rs  max_size_deque.rs  netlink.rs  network_address.rs  network_interface.rs  security.rs  shutdown.rs  socket.rs  url_ip_addr.rs  utils.rs
crates/service/src/address_monitor/: netlink_address_monitor.rs
crates/service/src/api_server/: generic.rs
crates/service/src/soap/: parser.rs
crates/service/src/soap/builder/body/: empty_body.rs  hello.rs  metadata.rs  probe.rs  probe_matches.rs
crates/service/src/soap/builder/header/: reply_to_from.rs
crates/service/src/soap/parser/: probe_match.rs  resolve.rs  resolve_match.rs
crates/service/src/test/: bye-template.xml  get-response-template.xml  get-response-windows.xml  hello-without-xaddrs-template.xml  probe-matches-with-xaddrs-template.xml  probe-template-pub-computer.xml  resolve-matches-template.xml
crates/service/src/test/xml/: nested-non-matching-elements.xml
crates/service/src/wsd/udp/: client.rs
crates/shared/: Cargo.toml
crates/shared/src/: lib.rs  netlink.rs
crates/wsdd-rs/: Cargo.toml
crates/wsdd-rs/packaging/: wsdd-rs-discovery.service  wsdd-rs-discovery.socket  wsdd-rs.default  wsdd-rs.service
crates/wsdd-rs/src/: address_monitor.rs  cli.rs  constants.rs  dns.rs  ffi.rs  kernel_buffer.rs  macros.rs  main.rs  message_receiver.rs  multicast_handler.rs  netlink.rs  network_handler.rs  shutdown.rs  signal_handlers.rs  socket.rs  task_tracker_ext.rs  test_utils.rs  udp_socket_with_addr.rs  utils.rs  wsd.rs  xml.rs
crates/wsdd-rs/src/address_monitor/: netlink_address_monitor.rs
crates/wsdd-rs/src/soap/: builder.rs  parser.rs
crates/wsdd-rs/src/soap/builder/: body.rs
crates/wsdd-rs/src/soap/builder/body/: bye.rs  empty_body.rs  metadata.rs  probe.rs  probe_matches.rs  resolve.rs  resolve_matches.rs
crates/wsdd-rs/src/soap/builder/header/: app_sequence.rs  none.rs
crates/wsdd-rs/src/soap/parser/: bye.rs  generic.rs  hello.rs  probe.rs  probe_match.rs  resolve.rs  resolve_match.rs  xaddrs.rs
crates/wsdd-rs/src/test/: hello-with-xaddrs-template.xml  probe-template-no-types.xml  probe-template-non-matching-type.xml  resolve-template.xml
crates/wsdd-rs/src/test/xml/: depth-underflow.xml  siblings.xml
crates/wsdd-rs/src/utils/: task.rs
crates/wsdd-rs/src/wsd/: device.rs
crates/wsdd-rs/src/wsd/http/: http_server.rs  router.rs
crates/wsdd-rs/src/wsd/udp/: client.rs  host.rs
crates/wsdd-rs/tests/: integration_tests.rs
diff/: python.out  rust.out
examples/: hello-generated.xml  hello.xml
output/new/: bye.xml  hello.xml  probe-matches.xml  resolve-matches.xml
output/original/: bye.xml  hello.xml  probe-matches.xml
src/: address_monitor.rs  api_server.rs  cli.rs  config.rs  constants.rs  dns.rs  ffi.rs  ffi2.rs  ffi_wrapper.rs  kernel_buffer.rs  main.rs  max_size_deque.rs  multicast_handler.rs  netlink.rs  netlink_address_monitor.rs  network_address.rs  network_address_monitor.rs  network_handler.rs  network_interface.rs  network_packet_handler.rs  security.rs  shutdown.rs  signal_handlers.rs  soap.rs  socket.rs  test_utils.rs  udp_address.rs  url_ip_addr.rs  utils.rs  wsd.rs  wsdd-full.py  wsdd.py  xml.rs
src/address_monitor/: netlink_address_monitor.rs
src/api_server/: generic.rs
src/soap/: builder.rs  parser.rs
src/soap/builder/: body.rs  bye.rs  empty_body.rs  header.rs  hello.rs  probe.rs  probe_matches.rs  resolve.rs  resolve_matches.rs
src/soap/builder/body/: bye.rs  empty_body.rs  hello.rs  metadata.rs  probe.rs  probe_matches.rs  resolve.rs  resolve_matches.rs
src/soap/builder/header/: app_sequence.rs  none.rs  reply_to_from.rs
src/soap/parser/: bye.rs  generic.rs  hello.rs  mod.rs  probe.rs  probe_match.rs  resolve.rs  resolve_match.rs  xaddrs.rs
src/test/: bye-template.xml  four-levels.xml  get-response-samsung-printer.xml  get-response-synology.xml  get-response-template.xml  get-template.xml  hello-template.xml  hello-with-xaddrs-template.xml  hello-without-xaddrs-template.xml  probe-matches-template.xml  probe-template-pub-computer.xml  probe-template.xml  resolve-matches-template.xml  resolve-template.xml  three-levels.xml
src/test/xml/: depth-underflow.xml  requires-direct-child-match.xml
src/utils/: mod.rs  task.rs
src/wsd/: device.rs  http.rs  message_handler.rs  mod.rs  udp.rs
src/wsd/http/: http_message_handler.rs  http_request_handler.rs  http_server.rs  mod.rs  router.rs
src/wsd/udp/: client.rs  host.rs  mod.rs  udp_message_handler.rs
tests/: integration_tests.rs
tests/ui/: larger_than.rs  larger_than.stderr
