[package]
name = "wsdd-rs"
# don't change this, it's updated before an actual build by update-version.sh
version = "0.0.0-development"
edition = "2021"
rust-version = "1.84.1"
authors = ["Kristof Mattei"]
description = "Rust seed application"
license-file = "LICENSE"
categories = ["starter", "seed"]
keywords = ["integrity", "seed", "starter", "docker", "release"]
repository = "https://github.com/kristof-mattei/wsdd-rs"

[lints.clippy]
# don't stop from compiling / running
all = "warn"
cargo = "warn"
complexity = "warn"
correctness = "warn"
pedantic = "warn"
perf = "warn"
# restriction = "warn"
style = "warn"
suspicious = "warn"

# this one causes confusion when combining variables (`foo`) and
# dereferenced variables (`foo.bar`). The latter cannot be inlined
# so we don't inline anything
uninlined-format-args = { level = "allow", priority = 127 }

[lints.rust]
let_underscore_drop = { level = "deny", priority = 127 }
non_ascii_idents = { level = "deny", priority = 127 }

[dependencies]
bytemuck = { version = "1.21.0", features = ["derive"] }
clap = { version = "4.5.20", features = ["cargo", "string", "derive"] }
color-eyre = { git = "https://github.com/eyre-rs/eyre", rev = "c4ee249f7c51dc6452e8704ae8d117d90d6eeebc" }
dotenvy = "0.15.7"
libc = "0.2.159"
socket2 = "0.5.7"
time = { version = "0.3.36", features = ["formatting"] }
tokio = { version = "1.40.0", features = [
    "rt-multi-thread",
    "macros",
    "time",
    "signal",
    "net",
    "sync",
    "io-util",
] }
tokio-util = "0.7.12"
tracing = "0.1.40"
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = [
    "env-filter",
    "time",
    "tracing-log",
] }
uuid = { version = "1.10.0", features = ["v4", "v5"] }
zerocopy = { version = "0.8.5", features = ["derive"] }

# OpenSSL for musl
[target.'cfg(all(any(target_arch="x86_64", target_arch="aarch64"), target_os="linux", target_env="musl"))'.dependencies]
openssl = { version = "0.10.70", features = ["vendored"] }
