[package]
name = "wsdd-rs"
# don't change this, it's updated before an actual build by update-version.sh
version = "0.0.0-development"
edition = "2021"
rust-version = "1.84.1"
authors = ["Kristof Mattei"]
description = "Rust seed application"
license-file = "LICENSE"
categories = ["starter", "seed"]
keywords = ["integrity", "seed", "starter", "docker", "release"]
repository = "https://github.com/kristof-mattei/wsdd-rs"

[lints.clippy]
# don't stop from compiling / running
all = "warn"
cargo = "warn"
complexity = "warn"
correctness = "warn"
pedantic = "warn"
perf = "warn"
# restriction = "warn"
style = "warn"
suspicious = "warn"

# this one causes confusion when combining variables (`foo`) and
# dereferenced variables (`foo.bar`). The latter cannot be inlined
# so we don't inline anything
uninlined-format-args = { level = "allow", priority = 127 }

[lints.rust]
let_underscore_drop = { level = "deny", priority = 127 }
non_ascii_idents = { level = "deny", priority = 127 }

[dependencies]
clap = { version = "4.5.29", features = ["cargo", "string", "derive"] }
color-eyre = { git = "https://github.com/eyre-rs/eyre", rev = "c4ee249f7c51dc6452e8704ae8d117d90d6eeebc" }
console-subscriber = "0.4.1"
dotenvy = "0.15.7"
hashbrown = "0.15.2"
libc = "0.2.169"
socket2 = "0.5.8"
tokio = { version = "1.43.0", features = [
    "rt-multi-thread",
    "macros",
    "time",
    "signal",
    "net",
    "sync",
    "io-util",
] }
tokio-util = { version = "0.7.13", features = ["rt"] }
tracing = "0.1.41"
tracing-error = "0.2.1"
tracing-subscriber = { version = "0.3.19", features = [
    "env-filter",
    "time",
    "tracing-log",
] }
uuid = { version = "1.13.1", features = ["v4", "v5"] }
zerocopy = { version = "0.8.17", features = ["derive"] }

# OpenSSL for musl
[target.'cfg(all(any(target_arch="x86_64", target_arch="aarch64"), target_os="linux", target_env="musl"))'.dependencies]
openssl = { version = "0.10.71", features = ["vendored"] }
