[package]
name = "shared"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
categories.workspace = true
keywords.workspace = true
repository.workspace = true
include.workspace = true

[features]
default = []

[dependencies]
libc.workspace = true
zerocopy = { features = ["derive"], workspace = true }

[dev-dependencies]

[lints]
workspace = true
