[package]
name = "wsdd-rs"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
categories.workspace = true
keywords.workspace = true
repository.workspace = true
include.workspace = true
build = "src/build.rs"

[features]
default = ["tokio-console"]
systemd = []
tokio-console = ["dep:console-subscriber"]

[dependencies]
axum = { version = "0.8.8", default-features = false, features = [
    "http1",
    "macros",
    "tokio",
    "tracing",
] }
bytes = "1.11.1"
clap = { version = "4.5.59", features = ["cargo", "string", "derive"] }
color-eyre = "0.6.5"
console-subscriber = { version = "0.5.0", optional = true }
const_format = { version = "0.2.35", features = ["fmt"] }
delegate = "0.13.5"
dotenvy = "0.15.7"
hashbrown = { version = "0.16.1", default-features = false, features = [
    "default-hasher",
    "inline-more",
    "equivalent",
] }
http = "1.4.0"
hyper-util = { version = "0.1.20", features = ["tracing"] }
ipnet = "2.11.0"
libc.workspace = true
mimalloc = { version = "0.1.48", features = ["v3"] }
pin-project = "1.1.10"
rand = "0.10.0"
reqwest = { version = "0.13.2", default-features = false, features = [
    "native-tls",
] }
ringmap = "0.2.3"
shared = { path = "../shared" }
socket2 = { version = "0.6.2", features = ["all"] }
thiserror = "2.0.18"
time = "0.3.47"
tokio = { version = "1.49.0", features = [
    "io-util",
    "macros",
    "net",
    "rt-multi-thread",
    "signal",
    "sync",
    "time",
    "tracing",
] }
tokio-util = { version = "0.7.18", features = ["rt"] }
tower-http = { version = "0.6.8", features = ["trace"] }
tower-service = "0.3.3"
tracing = "0.1.44"
tracing-error = "0.2.1"
tracing-subscriber = { version = "0.3.22", features = [
    "env-filter",
    "time",
    "tracing-log",
] }
url = "2.5.8"
uuid = { version = "1.21.0", default-features = false, features = [
    "std",
    "v5",
    "v7",
] }
xml = "1.2.1"
zerocopy.workspace = true

[target.'cfg(all(any(target_arch = "x86_64", target_arch = "aarch64"), target_os="linux", target_env="musl"))'.dependencies]
reqwest = { version = "0.13.2", default-features = false, features = [
    "native-tls-vendored",
] }

[dev-dependencies]
mockito = "=1.7.2"
pretty_assertions = { version = "=1.4.1", features = ["unstable"] }
trybuild = "=1.0.116"

# In case we want to check `event!` in tests
# conflicts with Miri
# tracing-test = "=0.2.5"

[package.metadata.cargo-machete]
ignored = ["shared"]

[package.metadata.spellcheck]
config = "spellcheck.toml"

[lints]
workspace = true
