[package]
name = "wsdd-rs"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
categories.workspace = true
keywords.workspace = true
repository.workspace = true
include.workspace = true
build = "src/build.rs"

[features]
default = ["tokio-console"]
systemd = []
tokio-console = ["dep:console-subscriber"]

[dependencies]
axum = { version = "0.8.9", default-features = false, features = [
    "http1",
    "macros",
    "tokio",
    "tracing",
] }
bytes = "1.11.1"
clap = { version = "4.6.1", features = ["cargo", "string", "derive"] }
color-eyre = "0.6.5"
console-subscriber = { version = "0.5.0", optional = true }
const-str = { version = "1.1.0", features = ["proc"] }
delegate = "0.13.5"
dotenvy = "0.15.7"
hashbrown = { version = "0.17.0", default-features = false, features = [
    "default-hasher",
    "equivalent",
    "inline-more",
] }
http = "1.4.0"
hyper-util = { version = "0.1.20", features = ["tracing"] }
ipnet = "2.12.0"
libc.workspace = true
mimalloc = "0.1.50"
pin-project = "1.1.12"
rand = "0.10.1"
reqwest = { version = "0.13.3", default-features = false, features = [
    "native-tls",
] }
ringmap = "0.2.5"
shared = { path = "../shared" }
socket2 = { version = "0.6.3", features = ["all"] }
thiserror = "2.0.18"
time = "0.3.47"
tokio = { version = "1.52.2", features = [
    "io-util",
    "macros",
    "net",
    "rt-multi-thread",
    "signal",
    "sync",
    "time",
    "tracing",
] }
tokio-util = { version = "0.7.18", features = ["rt"] }
tower-http = { version = "0.6.10", features = ["on-early-drop", "trace"] }
tower-service = "0.3.3"
tracing = "0.1.44"
tracing-error = "0.2.1"
tracing-subscriber = { version = "0.3.23", features = [
    "env-filter",
    "time",
    "tracing-log",
] }
url = "2.5.8"
uuid = { version = "1.23.1", default-features = false, features = [
    "std",
    "v5",
    "v7",
] }
xml = "1.3.0"
zerocopy.workspace = true

[target.'cfg(all(any(target_arch = "x86_64", target_arch = "aarch64"), target_os="linux", target_env="musl"))'.dependencies]
reqwest = { version = "0.13.3", default-features = false, features = [
    "native-tls-vendored",
] }

[dev-dependencies]
mockito = "=1.7.2"
pretty_assertions = { version = "=1.4.1", features = ["unstable"] }
trybuild = "=1.0.116"

# In case we want to check `event!` in tests
# conflicts with Miri
# tracing-test = "=0.2.5"

[package.metadata.cargo-machete]
ignored = []

[package.metadata.spellcheck]
config = "spellcheck.toml"

[lints]
workspace = true
